k8s/0service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restock
  labels:
    app: restock

spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 10000
  selector:
    app: restock
