k8s/2.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: restock-ingress
  annotations:
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: restock
            servicePort: 10000
